--- a/examples/dotnet/Shared/wwwroot/examples.html
+++ b/examples/dotnet/Shared/wwwroot/examples.html
@@ -12,7 +12,7 @@
 <div class="grid gap-4 p-2">
 <div class="flex flex-row">
     <div class="basis-8 p-2">
-        <div id="example_list" data-on-load="sse('/example_list')"></div>
+        <div id="example_list" data-on-load="@sse('/example_list')"></div>
     </div>
     <div class="basis-full p-4">
         <div id="example"></div>
