More docs fixes

--- a/examples/dotnet/Shared/wwwroot/index.html
+++ b/examples/dotnet/Shared/wwwroot/index.html
@@ -14,7 +14,7 @@
         data-signals="{'input':'','output':'','show_rocket':true,'more_examples':false}">
         <div>
             <div class="grid place-content-center min-h-24">
-                <h1><span id="title" data-on-load="@get('/title/D* Example'); sse('/check_more_examples')">___ + D*
+                <h1><span id="title" data-on-load="@get('/title/D* Example'); @get('/check_more_examples')">___ + D*
                         Example</span></h1>
             </div>
 
