--- a/examples/dotnet/Shared/wwwroot/examples.html
+++ b/examples/dotnet/Shared/wwwroot/examples.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Click to Edit</title>
-    <script type="module" defer="" src="/bundles/datastar.js"></script>
+    <script type="module" src="/bundles/datastar.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta name="view-transition" content="same-origin">
 </head>
