--- a/examples/dotnet/Shared/wwwroot/index.html
+++ b/examples/dotnet/Shared/wwwroot/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>dotnet Example</title>
-    <script type="module" defer src="https://cdn.jsdelivr.net/gh/starfederation/datastar/bundles/datastar.js"></script>
+    <script type="module"
+        src="https://cdn.jsdelivr.net/gh/starfederation/datastar@1.0.0-beta.1/bundles/datastar.js"></script>
     <link href="style.css" rel="stylesheet">
 </head>
 
