sdk/dotnet - corrections to doco. fixed sample. keep-alive only if 1.1

--- a/examples/dotnet/Shared/wwwroot/index.html
+++ b/examples/dotnet/Shared/wwwroot/index.html
@@ -44,7 +44,7 @@
                         data-show="$more_examples">More Examples</button>
                 </div>
                 <div class="flex-1">
-                    <pre data-text="JSON.stringify(ctx.signals,null,2)"></pre>
+                    <pre data-text="ctx.signals.JSON()"></pre>
                     <br>
                     <div id="target"></div>
                 </div>
