--- a/examples/go/hello-world/hello-world.html
+++ b/examples/go/hello-world/hello-world.html
@@ -28,7 +28,7 @@
             <input data-bind-delay id="delay" type="number"
                 class="w-36 rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-sky-500 focus:outline focus:outline-sky-500 dark:disabled:border-gray-700 dark:disabled:bg-gray-800/20" />
         </div>
-        <button data-on-click="@get('/hello-world.php')"
+        <button data-on-click="@get('/hello-world')"
             class="rounded-md bg-sky-500 px-5 py-2.5 leading-5 font-semibold text-white hover:bg-sky-700">
             Start
         </button>
