Update hello world image

--- a/examples/go/hello-world/hello-world.html
+++ b/examples/go/hello-world/hello-world.html
@@ -13,7 +13,7 @@
             <h1 class="text-gray-900 dark:text-white text-3xl font-semibold">
                 Datastar SDK Demo
             </h1>
-            <img src="https://camo.githubusercontent.com/a6ddfb0fe0895277916ff343dcb04e87e865f6a807361ab3a7f7533a3e7f0a31/68747470733a2f2f646174612d737461722e6465762f7374617469632f696d616765732f726f636b65742e77656270" class="w-16" />
+            <img src="https://data-star.dev/static/images/rocket.png" alt="Rocket" class="w-16" />
         </div>
         <p class="mt-2">
             SSE events will be streamed from the backend to the frontend.
