--- a/site/webcomponents/index.html
+++ b/site/webcomponents/index.html
@@ -9,7 +9,7 @@
   <script type="module" src="/src/ds-starfield.ts"></script>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0; overflow: hidden;">
   <ds-starfield style="background-color: black; color: blue;"></ds-starfield>
 </body>
 
